[gd_scene load_steps=3 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://Util/SubscribestarCsvConverter.gd" type="Script" id=2]

[node name="SubscribestarCsvConverter" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 343.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit2" type="TextEdit" parent="VBoxContainer"]
margin_top = 347.0
margin_right = 1280.0
margin_bottom = 690.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Output will be here"
syntax_highlighting = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 694.0
margin_right = 1280.0
margin_bottom = 720.0

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 317.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Json"

[node name="Button3" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 321.0
margin_right = 638.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Json stripped"

[node name="Button4" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 642.0
margin_right = 959.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Json grouped"

[node name="Button2" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 963.0
margin_right = 1280.0
margin_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Rich text"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
